[package]
name = "minimal-http-responder"
version = "0.1.2"
authors = ["Robert Ying <rbtying@aeturnalus.com>"]
edition = "2018"
description = "A minimal HTTP responder"
license = "MIT"
repository = "https://github.com/rbtying/minimal-http-responder/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
ctrlc = { version ="3", features=["termination"] }
